 - [DS-216] Migrating items that use additional metadata schemas causes an NPE
 - [DS-219] Internal Server error - include login details of user
 - [DS-221] XMLUI 'current activity' recognises Google Chrome as Safari
 - [DS-242] Special groups shown for logged in user rather than for user being examined
 - [DS-250] Invalid identifiers are not escaped
 - [DS-290] [dspace]/exports is not created during fresh install

(Larry Stone)
 - [DS-193] OAI RDF crosswalk fails when DC value is null
 - [DS-249] sub-daily utility script does not pass arguments to Java
 - [DS-252] Interpolate variables in the Subject: line of email templates as well
 - [DS-262] Bug in DS-118, new patch included
 - [DS-276] Patch to fix spelling error in Exception page

(Mark Diggory / Stuart Lewis)
 - [DS-201] handle.jar upgraded to version 6.2

(Andrea Bollini)
 - [DS-206] Input form visibility restriction doesn't work properly
 - [DS-199] SWORD module doesn't accept X-No-Op header (dry run)
 - [DS-223] Submission process show previous button in JSPUI also if the step is the first "visible" step
 - [DS-227] Values with double apos doesn't work in dropdown and list input type
 - [DS-259] Community/collection admin should not to be able to delete their admin group
 - [DS-261] Community Admin JSPUI: porting of the DS-228 patch
 - [DS-271] Make the OAI DC crosswalk configurable

(Tim Donohue)
 - [DS-218] Cannot add/remove email subscriptions from Profile page in XMLUI
 - [DS-238] Move item function in xmlui
 - [DS-281] Invalid Link to "Go to DSpace Home" on Page Not Found (XMLUI)

(Tim Donohue / Andrea Bollini)
 - [DS-228] Community Admin XMLUI: Delegated Admins Patch

(Ben Bosman)
 - [DS-226] confirmation page of edit profile has an invalid link

(OhioLINK)
 - [DS-225] dc.description.provenance - public display

(Yin Yin Latt / Stuart Lewis)
 - [DS-205] Creative Commons - option to set legal jurisdiction

(Fabio Kepler / Steve Williams)
 - [DS-258] Item View Thumbnails not displaying in XMLUI
